hphp/hack/test/typecheck/is_expression/invalid_hint_classname_with_generic2.php
<?hh // strict

final class C<T> {}

function foo<T>(mixed $x): void {
  if ($x is classname<C<T>>) {
    hh_show($x);
  }
}
